--- a/StringsTest/StringsTest.csproj
+++ b/StringsTest/StringsTest.csproj
@@ -67,11 +67,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AlphaFS">
-      <HintPath>..\Build\Debug\AlphaFS.dll</HintPath>
-    </Reference>
-    <Reference Include="StringsSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="StringsSharp">
       <HintPath>..\Build\Debug\AnyCPU\StringsSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -85,11 +81,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Strings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
